Added a small version identifier to the settings

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Settings</h2>
-        <p>Settings should go here</p>
+        <p>harrypeach.co.uk v2 - 20180504_1843</p>
         <hr>
         <h3>Debug Toggles</h3>
         <button onclick="document.getElementById('theme').href='assets/css/overlays/default.css'">Switch to Default Theme (DEBUG)</button>
