--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,11 @@
 
     <!-- Modal content -->
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Settings</h2>
+        <!-- <span class="close">&times;</span> -->
+        <h2>settings</h2>
         <p>harrypeach.co.uk v2 - 20180504_1843</p>
         <hr>
-        <h3>Debug Toggles</h3>
+        <h3>debug toggles</h3>
         <button onclick="document.getElementById('theme').href='assets/css/overlays/default.css'">Switch to Default Theme (DEBUG)</button>
         <button onclick="document.getElementById('theme').href='assets/css/overlays/retro.css'">Switch to Retro Theme (DEBUG)</button>
     </div>
