--- a/html/index.html
+++ b/html/index.html
@@ -22,11 +22,14 @@
     <div class="modal-content">
         <!-- <span class="close">&times;</span> -->
         <h2>settings</h2>
-        <p>harrypeach.co.uk v2 - 20180504_1843</p>
+        Theme:
+        <select id="theme-select">
+            <option value="default">Default</option>
+            <option value="retro">Retro Hacker</option>
+        </select>
         <hr>
-        <h3>debug toggles</h3>
-        <button onclick="document.getElementById('theme').href='assets/css/overlays/default.css'">Switch to Default Theme (DEBUG)</button>
-        <button onclick="document.getElementById('theme').href='assets/css/overlays/retro.css'">Switch to Retro Theme (DEBUG)</button>
+        <h3>debug options</h3>
+        <strong>Version: </strong><span>harrypeach.co.uk v2 - 20180504_1948</span>
     </div>
 </div>
 
