Added "90's fresh" theme

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
         <select id="theme-select">
             <option value="default">Default</option>
             <option value="retro">Retro Hacker</option>
+            <option value="90s">90s Fresh</option>
         </select>
         <hr>
         <h3>debug options</h3>
@@ -78,7 +79,7 @@ class Login extends React.Component {
                     <br />
                     <input type="password" placeholder="Password" name="password" class="login-input-text" required />
                     <br />
-                    <button type="submit" class="login-input-button">Log in</button>
+                    <button type="submit" class="styled-button">Log in</button>
                 </form>
             </div>
         )
