--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
 <link rel="stylesheet" type="text/css" href="assets/css/skeleton.css">
 <link rel="stylesheet" type="text/css" href="assets/css/core.css">
@@ -34,7 +35,7 @@
     </div>
 </div>
 
-<img src="assets/svg/settings.svg" id="modal-settings-icon">
+<i class="material-icons" id="modal-settings-icon">settings</i>
 
 <div class="container center-vertical">
     <div class="row">
