Added cookies to persist themes

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,6 @@
 
     <!-- Modal content -->
     <div class="modal-content">
-        <!-- <span class="close">&times;</span> -->
         <h2>settings</h2>
         Theme:
         <select id="theme-select">
@@ -31,7 +30,7 @@
         </select>
         <hr>
         <h3>debug options</h3>
-        <strong>Version: </strong><span>harrypeach.co.uk v2 - 20180504_1948</span>
+        <strong>Version: </strong><span>harrypeach.co.uk v2 - 20180505_1044</span><br>
     </div>
 </div>
 
@@ -132,4 +131,4 @@ function renderRoot(item) {
 <script type="text/babel">
     window.onload = renderRoot(0);
 </script>
-<script src="assets/js/modal.js"></script>
+<script src="assets/js/postload.js"></script>
