--- a/html/index.html
+++ b/html/index.html
@@ -74,10 +74,10 @@ class Login extends React.Component {
         return (
             <div>
                 <h1 id="title">login.</h1>
-                <form id="login-form" action="" method="post">
-                    <input type="text" placeholder="Username" name="username" class="login-input-text" required />
+                <form id="login-form" action="login.php" method="post">
+                    <input type="text" placeholder="Username" name="user" class="login-input-text" required />
                     <br />
-                    <input type="password" placeholder="Password" name="password" class="login-input-text" required />
+                    <input type="password" placeholder="Password" name="pass" class="login-input-text" required />
                     <br />
                     <button type="submit" class="styled-button">Log in</button>
                 </form>
