--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Harry Peach</title>
 
 <!-- CSS -->
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link href="assets/css/core.css" rel="stylesheet">
 
@@ -17,19 +17,25 @@
 
 
 <!-- Body -->
-<div class="background rellax">
-    &nbsp;
-</div>
-
-<div class="container">
-    <div class="section rellax" data-rellax-speed="3" data-rellax-zindex="1" style="background: red;">
-            This is a div to test the parallax capabilities.
-    </div>
-
-    <div class="section rellax" data-rellax-speed="3" data-rellax-zindex="1" style="background: red;">
-        This is a div to test the parallax capabilities.
+<div class="contain skew">
+    <div class="section rellax" data-rellax-speed="6" data-rellax-zindex="100" style="margin-bottom: 100px;">
+            <h1 id="title">Harry Peach</h1>
+            <p>This is some sample data, it is being used as padding so that the website may be tested and analysed to see what it may look like with actual data.</p>
     </div>
 </div>
+<div class="contain">
+    <div class="section rellax" data-rellax-speed="-2" data-rellax-zindex="100">
+        <h2>Another div</h2>
+        <p>Here would go some more information, this is secondary information and as such is placed in the second div.</p>
+    </div>
+
+    <div class="section rellax" data-rellax-speed="-2" data-rellax-zindex="100">
+        <h2>Another div</h2>
+        <p>Here would go some more information, this is secondary information and as such is placed in the second div.</p>
+    </div>
+</div>
+
+
 
 <!-- Initialize Rellax -->
 <script>
