Added placeholder for social links and project section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <div id="cover">
 	<div id="title">
 			<h1>Harry Peach</h1>
+			<span>Github | Facebook | Twitter</span>
 	</div>
 </div>
 <div id="content">
-	<span>test</span>
+	<h2>Projects</h2>
+	<span class="info">test</span>
 </div>
