Added seperate categories and information

--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
 <link rel="stylesheet" type="text/css" href="assets/css/core.css">
 <div id="cover">
 	<div id="title">
-			<h1>Harry Peach</h1>
-			<span>Github | Facebook | Twitter</span>
+		<h1>Harry Peach</h1>
+
+		<a id="linksubtitle" href="https://github.com/HarryPeach">GitHub</a> | Linkedin | Twitter
 	</div>
 </div>
 <div id="content">
-	<h2>Projects</h2>
-	<span class="info">test</span>
-</div>
+	<div class="category">
+		<h2>About</h2>
+		<div class="info">I'm currently a student at the University of Newcastle, pursuing a Bachelors in Computer Science.<br>
+			Previously I studied Maths, Computer Science, and History at A-Level as well as completing an Extended Project
+			Qualification.</span>
+		</div>
+		<div class="category">
+			<h2>Skills</h2>
+			<span class="info">Placeholder</span>
+		</div>
+		<div class="category">
+			<h2>Projects</h2>
+			<span class="info">Placeholder</span>
+		</div>
+	</div>
