--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
+<!-- Harry Peach 2018 -->
 <!DOCTYPE html>
+
+<!-- Meta tags -->
 <title>Harry Peach</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+
+<!-- External documents -->
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/core.css">
+
+<!-- Body -->
 <div id="cover">
 	<div id="title">
 		<h1>Harry Peach</h1>
