Added additional content and a darkened background

--- a/index.html
+++ b/index.html
@@ -22,16 +22,25 @@
 <div id="content">
 	<div class="category">
 		<h2>About</h2>
-		<div class="info">I'm currently a student at the University of Newcastle, pursuing a Bachelors in Computer Science.<br>
-			Previously I studied Maths, Computer Science, and History at A-Level as well as completing an Extended Project
-			Qualification.</span>
+		<div class="info">
+			<p>I'm currently a student at the University of Newcastle, pursuing a Bachelors in Computer Science.</p><br>
+			<p>Previously I studied Maths, Computer Science, and History at A-Level as well as completing an Extended Project
+				Qualification.</p></span>
 		</div>
 		<div class="category">
-			<h2>Skills</h2>
-			<span class="info">Placeholder</span>
+			<h2>Education</h2>
+			<h3>Newcastle University</h3>
+			<span id="subtitle">Computer Science BSc</span>
+			<p class="info">
+				Yada yada
+			</p>
 		</div>
 		<div class="category">
 			<h2>Projects</h2>
+			<h3>Skye Virtual Assistant</h3>
+			<!-- https://github.com/HarryPeach/SkyeAssistant -->
+			<!-- https://github.com/HarryPeach/Skye -->
+			<h3>Assorted android apps</h3>
 			<span class="info">Placeholder</span>
 		</div>
 	</div>
