Added a GPG key

--- a/index.html
+++ b/index.html
@@ -44,3 +44,7 @@
 			<span class="info">Placeholder</span>
 		</div>
 	</div>
+	<div id="footer">
+		<a href="download/977E53FE37EAE19C4A7B97606A676989D49F87A1.asc" id="linksubtitle" title="977E 53FE 37EA E19C 4A7B 9760 6A67 6989 D49F 87A1">GPG Key</a>
+	</div>
+</div>
