Updated GPG key

--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 		</div>
 	</div>
 	<div id="footer">
-		<a href="download/977E53FE37EAE19C4A7B97606A676989D49F87A1.asc" id="linksubtitle" title="977E 53FE 37EA E19C 4A7B 9760 6A67 6989 D49F 87A1">GPG Key</a>
+		<a href="download\DB727A58D201E808B96E638233066AB318A7A4A3.asc" id="linksubtitle" title="DB72 7A58 D201 E808 B96E 6382 3306 6AB3 18A7 A4A3">GPG Key</a>
 	</div>
 </div>
