Added grids to the project section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/core.css">
 
-<!-- Body -->
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+
 <div id="cover">
 	<div id="title">
 		<h1>Harry Peach</h1>
@@ -37,14 +39,23 @@
 		</div>
 		<div class="category">
 			<h2>Projects</h2>
-			<h3>Skye Virtual Assistant</h3>
-			<!-- https://github.com/HarryPeach/SkyeAssistant -->
-			<!-- https://github.com/HarryPeach/Skye -->
-			<h3>Assorted android apps</h3>
-			<span class="info">Placeholder</span>
+			<div class="row" style="text-align: center;">
+				<div class="col">
+					<h3>Skye Assistant</h3>
+					<p>A voice-activated virtual assistant written in Python.</p>
+					<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="Star HarryPeach/skye on GitHub">Star</a>
+				</div>
+				<div class="col">
+					<h3>bootscreennx</h3>
+					<p>A fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
+					<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="Star HarryPeach/bootscreennx on GitHub">Star</a>
+				</div>
+				<div class="col">test</div>
+			</div>
 		</div>
 	</div>
 	<div id="footer">
-		<a href="download\DB727A58D201E808B96E638233066AB318A7A4A3.asc" id="linksubtitle" title="DB72 7A58 D201 E808 B96E 6382 3306 6AB3 18A7 A4A3">GPG Key</a>
+		<a href="download\DB727A58D201E808B96E638233066AB318A7A4A3.asc" id="linksubtitle" title="DB72 7A58 D201 E808 B96E 6382 3306 6AB3 18A7 A4A3">GPG
+			Key</a>
 	</div>
 </div>
