Update OpenPGP key

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 	<div id="footer">
-		<a href="download\DB727A58D201E808B96E638233066AB318A7A4A3.asc" id="linksubtitle" title="DB72 7A58 D201 E808 B96E 6382 3306 6AB3 18A7 A4A3">GPG
+		<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" id="linksubtitle" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3">GPG
 			Key</a>
 	</div>
 </div>
