Added education section into grid containers too

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/core.css">
 
-<!-- Place this tag in your head or just before your close body tag. -->
+<!-- Javascript -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 <div id="cover">
@@ -23,29 +23,27 @@
 </div>
 <div id="content">
 	<div class="category">
-		<h2>About</h2>
-		<div class="info">
-			<p>I'm currently a student at the University of Newcastle, pursuing a Bachelors in Computer Science.</p><br>
-			<p>Previously I studied Maths, Computer Science, and History at A-Level as well as completing an Extended Project
-				Qualification.</p></span>
-		</div>
 		<div class="category">
 			<h2>Education</h2>
-			<h3>Newcastle University</h3>
-			<span id="subtitle">Computer Science BSc</span>
-			<p class="info">
-				Yada yada
-			</p>
+			<div class="row" style="text-align: center;">
+				<div class="col subsection">
+					<h3>Newcastle University</h3>
+					<span id="subtitle">Computer Science BSc</span>
+					<p class="info">
+						Yada yada
+					</p>
+				</div>
+			</div>
 		</div>
 		<div class="category">
 			<h2>Projects</h2>
 			<div class="row" style="text-align: center;">
-				<div class="col">
+				<div class="col subsection">
 					<h3>Skye Assistant</h3>
 					<p>A voice-activated virtual assistant written in Python.</p>
 					<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="Star HarryPeach/skye on GitHub">Star</a>
 				</div>
-				<div class="col">
+				<div class="col subsection">
 					<h3>bootscreennx</h3>
 					<p>A fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
 					<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="Star HarryPeach/bootscreennx on GitHub">Star</a>
@@ -55,7 +53,7 @@
 		</div>
 	</div>
 	<div id="footer">
-		<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" id="linksubtitle" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3">GPG
-			Key</a>
+		<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" id="linksubtitle" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3">My
+			GPG Key</a>
 	</div>
 </div>
