Added links to section titles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="row" style="text-align: center;">
 				<div class="col subsection">
 					<h3>Newcastle University</h3>
-					<span id="subtitle">Computer Science BSc</span>
+					<span class="subtitle">Computer Science BSc</span>
 					<p class="info">
 						Yada yada
 					</p>
@@ -41,12 +41,12 @@
 				<div class="col subsection">
 					<h3>Skye Assistant</h3>
 					<p>A voice-activated virtual assistant written in Python.</p>
-					<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="Star HarryPeach/skye on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="View the source code on GitHub">Source</a>
 				</div>
 				<div class="col subsection">
-					<h3>bootscreennx</h3>
+					<a href="https://harrypeach.github.io/bootscreennx" target="_blank"><h3>bootscreennx</h3></a>
 					<p>A fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
-					<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="Star HarryPeach/bootscreennx on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="View the source code on GitHub">Source</a>
 				</div>
 				<div class="col">test</div>
 			</div>
