Google Lighthouse recommended changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="title">
 		<h1>Harry Peach</h1>
 
-		<a id="linksubtitle" href="https://github.com/HarryPeach">GitHub</a> | Linkedin | Twitter
+		<a class="linksubtitle" href="https://github.com/HarryPeach">GitHub</a> | Linkedin | Twitter
 	</div>
 </div>
 <div id="content">
@@ -53,7 +53,7 @@
 		</div>
 	</div>
 	<div id="footer">
-		<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" id="linksubtitle" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3">My
+		<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" class="linksubtitle" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3">My
 			GPG Key</a>
 	</div>
 </div>
