Restructured the webpage and added extra github repos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Harry Peach 2018 -->
 <!DOCTYPE html>
-
+<html lang="en">
 <!-- Meta tags -->
 <title>Harry Peach</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,32 +23,36 @@
 </div>
 <div id="content">
 	<div class="category">
-		<div class="category">
-			<h2>Education</h2>
-			<div class="row" style="text-align: center;">
-				<div class="col subsection">
-					<h3>Newcastle University</h3>
-					<span class="subtitle">Computer Science BSc</span>
-					<p class="info">
-						Yada yada
-					</p>
-				</div>
+		<h2>Projects</h2>
+		<div class="row" style="text-align: center;">
+			<div class="col subsection">
+				<h3>Skye Assistant</h3>
+				<p>A voice-activated virtual assistant written in Python.</p>
+				<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="View the source code on GitHub">Source</a>
+			</div>
+			<div class="col subsection">
+				<a href="https://harrypeach.github.io/bootscreennx" target="_blank">
+					<h3>bootscreennx</h3>
+				</a>
+				<p>A fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
+				<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="View the source code on GitHub">Source</a>
+			</div>
+			<div class="col subsection">
+				<h3>RedditMonitor</h3>
+				<p>Monitors reddit for specific keywords and phrases, written in Java using FXML.</p>
+				<a class="github-button" href="https://github.com/HarryPeach/RedditMonitor" aria-label="View the source code on GitHub">Source</a>
 			</div>
 		</div>
-		<div class="category">
-			<h2>Projects</h2>
-			<div class="row" style="text-align: center;">
-				<div class="col subsection">
-					<h3>Skye Assistant</h3>
-					<p>A voice-activated virtual assistant written in Python.</p>
-					<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="View the source code on GitHub">Source</a>
-				</div>
-				<div class="col subsection">
-					<a href="https://harrypeach.github.io/bootscreennx" target="_blank"><h3>bootscreennx</h3></a>
-					<p>A fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
-					<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="View the source code on GitHub">Source</a>
-				</div>
-				<div class="col">test</div>
+	</div>
+	<div class="category">
+		<h2>Education</h2>
+		<div class="row" style="text-align: center;">
+			<div class="col subsection">
+				<h3>Newcastle University</h3>
+				<span class="subtitle">Computer Science BSc</span>
+				<p class="info">
+					Yada yada
+				</p>
 			</div>
 		</div>
 	</div>
@@ -57,3 +61,5 @@
 			GPG Key</a>
 	</div>
 </div>
+
+</html>
