Added "other information" tab

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <div id="cover">
 	<div id="title">
 		<h1>Harry Peach</h1>
-
-		<a class="linksubtitle" href="https://github.com/HarryPeach">GitHub</a> | Linkedin | Twitter
+		<a class="linksubtitle" href="https://github.com/HarryPeach">GitHub</a> | <a href="https://www.linkedin.com/in/harry-peach-a28893156">Linkedin</a>
+		| Twitter
 	</div>
 </div>
 <div id="content">
-	<div class="category">
+	<section class="category">
 		<h2>Projects</h2>
 		<div class="row" style="text-align: center;">
 			<div class="col subsection">
@@ -43,23 +43,30 @@
 				<a class="github-button" href="https://github.com/HarryPeach/RedditMonitor" aria-label="View the source code on GitHub">Source</a>
 			</div>
 		</div>
-	</div>
-	<div class="category">
+	</section>
+	<section class="category">
 		<h2>Education</h2>
 		<div class="row" style="text-align: center;">
 			<div class="col subsection">
 				<h3>Newcastle University</h3>
 				<span class="subtitle">Computer Science BSc</span>
 				<p class="info">
-					Yada yada
+					2018 - present
 				</p>
 			</div>
 		</div>
-	</div>
-	<div id="footer">
-		<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" class="linksubtitle" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3">My
-			GPG Key</a>
-	</div>
+	</section>
+	<section class="category">
+		<h2>Other Information</h2>
+		<div class="row">
+			<div class="col subsection">
+					<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3"><span class="infoline">Public OpenPGP Key (Hover for fingerprint)</span></a><br>
+			</div>
+		</div>
+	</section>
+	<footer id="footer">
+		Copyright Harry Peach 2018
+	</footer>
 </div>
 
 </html>
