--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- Meta tags -->
 <title>Harry Peach</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Student researching Computer Science BSc at Newcastle University.">
 <meta charset="utf-8">
 
 <!-- External documents -->
@@ -21,20 +22,21 @@
 		| Twitter
 	</div>
 </div>
+
 <div id="content">
 	<section class="category">
 		<h2>Projects</h2>
 		<div class="row" style="text-align: center;">
 			<div class="col subsection">
 				<h3>Skye Assistant</h3>
-				<p>A voice-activated virtual assistant written in Python.</p>
+				<p>An extensible, voice-controlled virtual assistant written in Python.</p>
 				<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="View the source code on GitHub">Source</a>
 			</div>
 			<div class="col subsection">
-				<a href="https://harrypeach.github.io/bootscreennx" target="_blank">
+				<a href="https://harrypeach.github.io/bootscreennx" target="_blank" rel="noreferrer">
 					<h3>bootscreennx</h3>
 				</a>
-				<p>A fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
+				<p>Fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
 				<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="View the source code on GitHub">Source</a>
 			</div>
 			<div class="col subsection">
@@ -57,10 +59,36 @@
 		</div>
 	</section>
 	<section class="category">
+		<h2>Contact</h2>
+		<div class="row" style="text-align: center;">
+			<div class="col subsection">
+				<h3>Email</h3>
+				<p class="info" id="emailProtection">
+					<!-- Email protection from spambot crawlers -->
+					<script type="text/javascript">
+						document.getElementById("emailProtection").innerHTML = atob("PmEvPG1vYy5saWFtZ0A5OTkxaGNhZXB5cnJhaD4ibW9jLmxpYW1nQDk5OTFoY2FlcHlycmFoOm90bGlhbSI9ZmVyaCBhPA==").split("").reverse().join("");
+					</script>
+					<noscript>
+						<em>My email address is protected by JavaScript, if you can't use javascript please contact me through another
+							method.</em>
+					</noscript>
+				</p>
+			</div>
+			<div class="col subsection">
+				<h3>Telegram</h3>
+				<p class="info">
+					<a href="https://t.me/harrypeach" target="_blank" rel="noreferrer">@harrypeach</a>
+				</p>
+			</div>
+		</div>
+
+	</section>
+	<section class="category">
 		<h2>Other Information</h2>
 		<div class="row">
 			<div class="col subsection">
-					<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3"><span class="infoline">Public OpenPGP Key (Hover for fingerprint)</span></a><br>
+				<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3"><span
+					 class="infoline">Public OpenPGP Key (Hover for fingerprint)</span></a><br>
 			</div>
 		</div>
 	</section>
@@ -68,5 +96,7 @@
 		Copyright Harry Peach 2018
 	</footer>
 </div>
+
+
 
 </html>
