--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<h2>Education</h2>
 		<div class="row" style="text-align: center;">
 			<div class="col subsection">
-				<h3>Newcastle University</h3>
+					<a href="https://ncl.ac.uk" target="_blank" rel="noreferrer"><h3>Newcastle University</h3></a>
 				<span class="subtitle">Computer Science BSc</span>
 				<p class="info">
 					2018 - present
