--- a/index.html
+++ b/index.html
@@ -1,123 +1,33 @@
-<!-- Harry Peach 2018 -->
 <!DOCTYPE html>
 <html lang="en">
-<!-- Meta tags -->
+<meta charset="UTF-8">
+<meta name="description" content="A website for my personal projects, contact information, and a few other neat things.">
+<meta name="author" content="Harry Peach">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
 <title>Harry Peach</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Student researching Computer Science BSc at Newcastle University.">
-<meta charset="utf-8">
-
-<!-- External documents -->
-<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="assets/css/core.css">
-
-<!-- Javascript -->
-<script async defer src="https://buttons.github.io/buttons.js"></script>
-
-<div id="cover">
-	<div id="title">
-		<h1>Harry Peach</h1>
-		<a class="linksubtitle" href="https://github.com/HarryPeach">GitHub</a> | <a href="https://www.linkedin.com/in/harry-peach-a28893156">Linkedin</a>
-		| Twitter
-	</div>
-</div>
-
-<div id="content">
-	<section class="category">
-		<h2>Projects</h2>
-		<div class="row" style="text-align: center;">
-			<div class="col subsection">
-				<h3>Skye Assistant</h3>
-				<p>An extensible, voice-controlled virtual assistant written in Python.</p>
-				<a class="github-button" href="https://github.com/HarryPeach/skye" aria-label="View the source code on GitHub">Source</a>
-			</div>
-			<div class="col subsection">
-				<a href="https://harrypeach.github.io/bootscreennx" target="_blank" rel="noreferrer">
-					<h3>bootscreennx</h3>
-				</a>
-				<p>Fork of a BIOS image generator for the Nintendo 3DS, updated and maintained for the Nintendo Switch.</p>
-				<a class="github-button" href="https://github.com/HarryPeach/bootscreennx" aria-label="View the source code on GitHub">Source</a>
-			</div>
-			<div class="col subsection">
-				<h3>RedditMonitor</h3>
-				<p>Monitors reddit for specific keywords and phrases, written in Java using FXML.</p>
-				<a class="github-button" href="https://github.com/HarryPeach/RedditMonitor" aria-label="View the source code on GitHub">Source</a>
-			</div>
-		</div>
-	</section>
-	<section class="category">
-		<h2>Education & Awards</h2>
-		<div class="row" style="text-align: center;">
-			<div class="col subsection">
-				<a href="https://ncl.ac.uk" target="_blank" rel="noreferrer">
-					<h3>Newcastle University</h3>
-				</a>
-				<span class="subtitle">Computer Science BSc</span>
-				<p class="info">
-					2018 - present
-				</p>
-			</div>
-			<div class="col subsection">
-				<a href="https://www.cybersecuritychallenge.org.uk" target="_blank" rel="noreferrer">
-					<h3>CyberCenturion / CyberPatriot</h3>
-				</a>
-				<span class="subtitle">2018</span>
-				<p class="info">
-					Best Cadet Team
-				</p>
-			</div>
-			<div class="col subsection">
-				<a href="https://www.cvqo.org/qualifications/qualifications-for-13-18-years-olds/ilm-level-2-award-in-leadership-and-team-skills/"
-				 target="_blank" rel="noreferrer">
-					<h3>CVQO Leadership Accreditation</h3>
-				</a>
-				<span class="subtitle">2015</span>
-				<p class="info">
-					ILM Level 2
-				</p>
-			</div>
-		</div>
-	</section>
-	<section class="category">
-		<h2>Contact</h2>
-		<div class="row" style="text-align: center;">
-			<div class="col subsection">
-				<h3>Email</h3>
-				<p class="info" id="emailProtection">
-					<!-- Email protection from spambot crawlers -->
-					<script type="text/javascript">
-						document.getElementById("emailProtection").innerHTML = atob("PmEvPG1vYy5saWFtZ0A5OTkxaGNhZXB5cnJhaD4ibW9jLmxpYW1nQDk5OTFoY2FlcHlycmFoOm90bGlhbSI9ZmVyaCBhPA==").split("").reverse().join("");
-					</script>
-					<noscript>
-						<em>My email address is protected by JavaScript, if you can't use javascript please contact me through another
-							method.</em>
-					</noscript>
-				</p>
-			</div>
-			<div class="col subsection">
-				<h3>Telegram</h3>
-				<p class="info">
-					<a href="https://t.me/harrypeach" target="_blank" rel="noreferrer">@harrypeach</a>
-				</p>
-			</div>
-		</div>
-
-	</section>
-	<section class="category">
-		<h2>Other Information</h2>
-		<div class="row">
-			<div class="col subsection">
-				<a href="download\CFA0FBC92E951DAF84990A415A24B165D56227F3.asc" title="CFA0 FBC9 2E95 1DAF 8499 0A41 5A24 B165 D562 27F3"><span
-					 class="infoline">Public OpenPGP Key (Hover for fingerprint)</span></a><br>
-			</div>
-		</div>
-	</section>
-	<footer id="footer">
-		Copyright Harry Peach 2018
-	</footer>
-</div>
-
-
+<header>
+    <h1>Harry Peach</h1>
+    <p>Computer Science student at Newcastle University</p>
+</header>
+<main>
+    <section>
+        <h2>Projects I've worked on</h2>
+        <h3>Skye Assistant</h3>
+        <p>An extensible, voice controller, virtual assistant. Written in Python.</p>
+        <h3>bootscreenx</h3>
+        <p>My fork of a BIOS image generator for the Nintendo 3DS console. Updated and maintained for the Nintendo Switch.</p>
+    </section>
+    <section>
+        <h2>How to contact me</h2>
+        <h3>Email</h3>
+        <p>harrypeach1999@gmail.com</p>
+        <h3>Telegram</h3>
+        <p>@harrypeach</p>
+    </section>
+</main>
+<footer>
+    <a href="#">My GPG Key</a> <!-- TODO: Include GPG key-->
+</footer>
 
 </html>
