--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     </header>
     <main>
         <section>
-            <h2>Projects I've worked on</h2>
+            <h2>Some of my projects</h2>
+            <div id="content">
+                <h3>Ciph</h3>
+                <p>Ciph is an android app to generate secure and memorable passwords. Based on a famous xkcd comic, passwords are generated from a pool of random words making them easier to remember and providing higher entropy than a traditional password.</p>
+                <a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph" title="Download the app from the Play Store" id="link-button"><i class="fab fa-google-play">&nbsp;</i>Play Store</a>
+                <a href="https://gitlab.com/harrypeach1999/ciph" title="View the public issue tracker" id="link-button"><i class="fab fa-gitlab">&nbsp;</i>Issue Tracker</a>
+            </div>
             <div id="content">
                 <h3>Skye Assistant</h3>
                 <p>An extensible, voice controlled, virtual assistant. Written in Python.</p>
