Extra content in the projects section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>Some of my projects</h2>
             <div id="content">
                 <h3>Ciph</h3>
-                <p>Ciph is an android app to generate secure and memorable passwords. Based on a famous xkcd comic, passwords are generated from a pool of random words making them easier to remember and providing higher entropy than a traditional password.</p>
+                <p>Ciph is an android app to generate secure and memorable passwords. Based on a <a href="https://xkcd.com/936/">famous xkcd comic</a>, passwords are generated from a pool of random words making them easier to remember and providing higher entropy than a traditional password.</p>
                 <a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph" title="Download the app from the Play Store" id="link-button"><i class="fab fa-google-play">&nbsp;</i>Play Store</a>
                 <a href="https://gitlab.com/harrypeach1999/ciph" title="View the public issue tracker" id="link-button"><i class="fab fa-gitlab">&nbsp;</i>Issue Tracker</a>
             </div>
@@ -37,9 +37,7 @@
             </div>
             <div id="content">
                 <h3>bootscreenx</h3>
-                <p>My fork of a BIOS image generator for the Nintendo 3DS console. Updated and maintained for the
-                    Nintendo
-                    Switch.</p>
+                <p>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Originally for the Nintendo 3DS but updated and maintained for the switch by me.</p>
                 <a href="https://github.com/HarryPeach/bootscreennx" title="View the source code on GitHub" id="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
                 <a href="https://harrypeach.github.io/bootscreennx/" title="View the project itself" id="link-button"><i class=""></i>Website</a>
             </div>
