Added more content and styled hr

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
     <header>
         <h1>Harry Peach</h1>
-        <p>Computer Science student at Newcastle University</p>
+        <p>Computer Science student at <a href="https://ncl.ac.uk/">Newcastle University</a></p>
     </header>
+    <hr>
     <main>
         <section>
             <h2>Some of my projects</h2>
@@ -31,15 +32,15 @@
                 <a href="https://gitlab.com/harrypeach1999/ciph" title="View the public issue tracker" id="link-button"><i class="fab fa-gitlab">&nbsp;</i>Issue Tracker</a>
             </div>
             <div id="content">
-                <h3>Skye Assistant</h3>
-                <p>An extensible, voice controlled, virtual assistant. Written in Python.</p>
-                <a href="https://github.com/HarryPeach/skye" title="View the source code on GitHub" id="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
-            </div>
-            <div id="content">
                 <h3>bootscreenx</h3>
                 <p>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Originally for the Nintendo 3DS but updated and maintained for the switch by me.</p>
                 <a href="https://github.com/HarryPeach/bootscreennx" title="View the source code on GitHub" id="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
                 <a href="https://harrypeach.github.io/bootscreennx/" title="View the project itself" id="link-button"><i class=""></i>Website</a>
+            </div>
+            <div id="content">
+                <h3>Skye Assistant</h3>
+                <p>Originally created for my A-level coursework; Skye Assistant is a voice controlled virtual assistant. I rewrote the project with the primary goal of making it more extensible and cleaning up the codebase.</p>
+                <a href="https://github.com/HarryPeach/skye" title="View the source code on GitHub" id="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
             </div>
         </section>
         <section>
@@ -54,6 +55,7 @@
             </div>
         </section>
     </main>
+    <hr>
     <footer>
         <a href="#">My GPG Key</a> <!-- TODO: Include GPG key-->
         <span>Copyright &copy; Harry Peach 2019</span>
