Added links to the contacts

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 <table>
                     <tr id="contactMethod">
                         <td>Email</td>
-                        <td>harrypeach1999@gmail.com</td>
+                        <td><a href="mailto:harrypeach1999@gmail.com">harrypeach1999@gmail.com</a></td>
                     </tr>
                     <tr>
                         <td>Telegram</td>
-                        <td>harrypeach</td>
+                        <td><a href="https://t.me/harrypeach">harrypeach</a></td>
                     </tr>
                 </table>
             </div>
