Fixed typo in Gitlab URL

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Harry Peach</h1>
         <p>Computer Science student at <a href="https://ncl.ac.uk/">Newcastle University</a>.</p>
         <a href="https://github.com/HarryPeach" title="Visit my GitHub page" class="link-button"><i class="fab fa-github"></i></a>
-        <a href="https://https://gitlab.com/harrypeach1999" title="Visit my GitLab page" class="link-button"><i class="fab fa-gitlab"></i></a>
+        <a href="https://gitlab.com/harrypeach1999" title="Visit my GitLab page" class="link-button"><i class="fab fa-gitlab"></i></a>
         <a href="https://www.linkedin.com/in/harry-peach-a28893156/" title="Visit my LinkedIn page" class="link-button"><i class="fab fa-linkedin"></i></a>
     </header>
     <hr>
