Minor text changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="content">
                 <h3>bootscreenx</h3>
-                <p>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Originally for the Nintendo 3DS but updated and maintained for the switch by me.</p>
+                <p>A website to create boot images for the Nintendo Switch that resemble BIOS screens from early computers. Originally for the Nintendo 3DS but updated and maintained for the Switch by me.</p>
                 <a href="https://harrypeach.github.io/bootscreennx/" title="View the project itself" class="link-button"><i class="fas fa-share-square">&nbsp;</i>Website</a>
                 <a href="https://github.com/HarryPeach/bootscreennx" title="View the source code on GitHub" class="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
             </div>
@@ -54,7 +54,7 @@
                 <a href="https://github.com/HarryPeach/skye" title="View the source code on GitHub" class="link-button"><i class="fab fa-github">&nbsp;</i>Source</a>
             </div>
             <div class="content">
-                <p>You can find most of my projects on my <a href="https://github.com/HarryPeach">GitHub</a> page</p>
+                <p>You can find most of my other projects on my <a href="https://github.com/HarryPeach">GitHub</a> page</p>
             </div>
         </section>
         <section>
